# dualbot-TaskManager

./: Dockerfile  README.md  newrelic.ini  pyproject.toml  schema.yml
.github/workflows/: main.yml
main/: admin.py  serializers.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_deadline.py  0004_alter_task_priority.py  0005_alter_task_author_alter_task_executor_and_more.py  0006_alter_task_tags.py  0007_user_date_of_birth_user_phone.py
main/models/: tag.py  task.py  user.py
task_manager/: settings.py  urls.py
tests/: base.py  est_user.py  test_75.py  test_mail.py  test_tag.py  test_task.py  test_user.py
